packages/astro/e2e/fixtures/errors/src/components/JSRuntimeError.js
export default function Error() {
  return undefinedvar;
}
